--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
         </div>
         <ul class="nav">
             <li><a href="about.html">Quién soy</a></li>
-            <li><a href="process.html">Fotos</a></li>
-            <li><a href="work.html">Escribir carta</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="fotos.html">Fotos</a></li>
+            <li><a href="carta.html">Escribir carta</a></li>
         </ul>
         <ul class="nav-hamburger">
-            <li><a href="about.html">About</a></li>
-            <li><a href="process.html">Process</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">Quién soy</a></li>
+            <li><a href="fotos.html">Fotos</a></li>
+            <li><a href="carta.html">Escribir carta</a></li>
         </ul>
     </header>
     <section id="container">
@@ -38,7 +36,7 @@
             <h4>Así es, niños, es verdad. Lo único que tienes que hacer es completar esta carta... ¡Papá Noel te está esperando! Y te enviará su respuesta desde el Polo Norte, más rápido que un rayo.</h4>
 
             <div class="button">
-                <a href="#work">Escribir carta<i class="right"></i></a>
+                <a href="/carta.html">Escribir carta<i class="right"></i></a>
             </div>
         </div>
     </section>
