--- a/fotos.html
+++ b/fotos.html
@@ -32,9 +32,8 @@
     </header>
     <section id="container">
         <div id="hero">
-            <p>¿Quieres escribirle una carta a Papá Noel?</p>
-            <h4>Así es, niños, es verdad. Lo único que tienes que hacer es completar esta carta... ¡Papá Noel te está esperando! Y te enviará su respuesta desde el Polo Norte, más rápido que un rayo.</h4>
-
+            <p>Fotos</p>
+            <img class="santa" src="css/img/santacar.jpg">
             <div class="button">
                 <a href="/carta.html">Escribir carta<i class="right"></i></a>
             </div>
