--- a/carta.html
+++ b/carta.html
@@ -35,14 +35,8 @@
             <p>Escribe tu carta</p>
             <form action="mailto:santa@gmail.com" id="user">
                 <textarea type="text" name="usrname" class="letter" placeholder="Si has sido bueno... pídele lo que quieras a Papá Noel!"></textarea>
-                <input type="submit" class="button">
+                <input type="submit" class="send-letter">
             </form>
-<!--
-
-            <div class="button">
-                <a href="/carta.html">Enviar<i class="right"></i></a>
-            </div>
--->
         </div>
     </section>
     <footer>
