--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <div class="bar3"></div>
         </div>
         <ul class="nav">
-            <li><a href="about.html">Quién soy</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="carta.html">Escribir carta</a></li>
+            <li><a href="/about.html">Quién soy</a></li>
+            <li><a href="/fotos.html">Fotos</a></li>
+            <li><a href="/carta.html">Escribir carta</a></li>
         </ul>
         <ul class="nav-hamburger">
-            <li><a href="about.html">Quién soy</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="carta.html">Escribir carta</a></li>
+            <li><a href="/about.html">Quién soy</a></li>
+            <li><a href="/fotos.html">Fotos</a></li>
+            <li><a href="/carta.html">Escribir carta</a></li>
         </ul>
     </header>
     <section id="container">
@@ -36,7 +36,7 @@
             <h4>Así es, niños, es verdad. Lo único que tienes que hacer es completar esta carta... ¡Papá Noel te está esperando! Y te enviará su respuesta desde el Polo Norte, más rápido que un rayo.</h4>
 
             <div class="button">
-                <a href="/carta.html">Escribir carta<i class="right"></i></a>
+                <a href="../santaclaus/carta.html">Escribir carta<i class="right"></i></a>
             </div>
         </div>
     </section>
