--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <div class="bar3"></div>
         </div>
         <ul class="nav">
-            <li><a href="/about.html">Quién soy</a></li>
-            <li><a href="/fotos.html">Fotos</a></li>
-            <li><a href="/carta.html">Escribir carta</a></li>
+            <li><a href="../santaclaus/about.html">Quién soy</a></li>
+            <li><a href="../santaclaus/fotos.html">Fotos</a></li>
+            <li><a href="../santaclaus/carta.html">Escribir carta</a></li>
         </ul>
         <ul class="nav-hamburger">
-            <li><a href="/about.html">Quién soy</a></li>
-            <li><a href="/fotos.html">Fotos</a></li>
-            <li><a href="/carta.html">Escribir carta</a></li>
+            <li><a href="../santaclaus/about.html">Quién soy</a></li>
+            <li><a href="../santaclaus/fotos.html">Fotos</a></li>
+            <li><a href="../santaclaus/carta.html">Escribir carta</a></li>
         </ul>
     </header>
     <section id="container">
