--- a/fotos.html
+++ b/fotos.html
@@ -13,21 +13,21 @@
 
 <body>
     <header class="header">
-        <h1 class="logo"><a href="index.html">Escribir a Papá Noel</a></h1>
+        <h1 class="logo"><a href="index.html">Escribe a Papá Noel</a></h1>
         <div class="hamburger" onclick="showNav()">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
         </div>
         <ul class="nav">
-            <li><a href="about.html">Quién soy</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="carta.html">Escribir carta</a></li>
+            <li><a href="../santaclaus/about.html">Quién soy</a></li>
+            <li><a href="../santaclaus/fotos.html">Fotos</a></li>
+            <li><a href="../santaclaus/carta.html">Escribir carta</a></li>
         </ul>
         <ul class="nav-hamburger">
-            <li><a href="about.html">Quién soy</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="carta.html">Escribir carta</a></li>
+            <li><a href="../santaclaus/about.html">Quién soy</a></li>
+            <li><a href="../santaclaus/fotos.html">Fotos</a></li>
+            <li><a href="../santaclaus/carta.html">Escribir carta</a></li>
         </ul>
     </header>
     <section id="container">
