--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <h1 class="logo"><a href="index.html">Escribir a Papá Noel</a></h1>
+        <h1 class="logo"><a href="index.html">Escribe a Papá Noel</a></h1>
         <div class="hamburger" onclick="showNav()">
             <div class="bar1"></div>
             <div class="bar2"></div>
