--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <h4>¿Sabes quién soy?</h4>
             <img class="santa" src="css/img/santa.png">
             <div class="button">
-                <a href="/carta.html">Escribir carta<i class="right"></i></a>
+                <a href="../santaclaus/carta.html">Escribir carta<i class="right"></i></a>
             </div>
         </div>
     </section>
