--- a/fotos.html
+++ b/fotos.html
@@ -35,7 +35,7 @@
             <p>Fotos</p>
             <img class="santa" src="css/img/santacar.jpg">
             <div class="button">
-                <a href="/carta.html">Escribir carta<i class="right"></i></a>
+                <a href="../santaclaus/carta.html">Escribir carta<i class="right"></i></a>
             </div>
         </div>
     </section>
