--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
     <footer>
-        <p>Crafted with <i style="color:#ff7070" class="fa fa-heart"></i> by Ivan Cazorla</p>
+        <p>Diseñado con <i style="color:#ff7070" class="fa fa-heart"></i> por Ivan Cazorla</p>
         <script>
             //menu mobile working
             function showNav() {
