--- a/carta.html
+++ b/carta.html
@@ -34,7 +34,7 @@
         <div id="hero">
             <p>Escribe tu carta</p>
             <form action="mailto:santa@gmail.com" id="user">
-                <textarea type="text" name="usrname" class="letter" placeholder="Si has sido bueno... pídele lo que quieras a Papá Noel!"></textarea>
+                <textarea type="text" name="usrname" class="letter" placeholder="Querido Papá Noel..."></textarea>
                 <input type="submit" class="send-letter">
             </form>
         </div>
